--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,6 +29,10 @@ en:
     new: New Post
     submit: Submit
     preview: Preview
+    titleplace: Please fill in the title
+    genreplace: --Please choose--
+    mdnotation: " (md notation can be used)"
+    bodyplace: Please fill in the body
   ranking:
     cr: Contribution Ranking
     rg: Ranking
