--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,9 @@ en:
     genreplace: --Please choose--
     mdnotation: " (md notation can be used)"
     bodyplace: Please fill in the body
+    newsuccess: The post was successfully posted.
+    editsuccess: The post was successfully edited.
+    deletesuccess: The post was successfully deleted.
   ranking:
     cr: Contribution Ranking
     rg: Ranking
