--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -66,7 +66,7 @@ en:
   notice:
     notice: Notice
     nounread: There are no notifications.
-    ago: ago
+    ago: " ago"
     yourpost: your post
     liked: " has liked "
     good: ""
