--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,6 +56,7 @@ en:
     uc: Update Contributions
     np: New Post
     update: Update
+    updated: You have updated contributions successfully.
   relation:
     follows: Follows
     followers: Followers
@@ -68,6 +69,7 @@ en:
     reported: It's been reported.
     reportnote: Once the report is sent, the operation department will check the details of the report and take action.
     send: Send
+    reportsuccess: You have successfully reported.
   notice:
     notice: Notice
     nounread: There are no notifications.
