--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -54,6 +54,7 @@ ja:
     cs: コントリビューション
     posts: "の投稿"
     uc: コントリビューション更新
+    uca: '*毎月1日に自動で再更新されます。'
     np: 新規投稿
     update: 更新
     updated: コントリビューション更新に成功しました。
