--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -11,6 +11,8 @@ ja:
     newleft: "(新着"
     newright: "件)"
     guestmessage: "ゲストログインが成功しました。"
+    search_form: "投稿キーワードを入力..."
+    search_submit: "検索"
   top:
     wwyd?: どうする？
     contre?: こんとる？
