--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,7 @@ en:
   top:
     wwyd?: What will you do?
     contre?: Contribute?
+    form: GitHub username
     contre: Contribute
     ur: You are...
   about:
